# make-it-so

./: .gitignore  README.md  pyproject.toml
make_it_so/: gcp_cluster_simple.tf  manage.py
make_it_so/base_classes/: apps.py  enum_types.py  models.py  pydantic_models.py
make_it_so/gcp_resources/: admin.py  api_client.py  apps.py  gcloud_client.py  types.py
make_it_so/gcp_resources/resources/: base_resource.py  firewalls.py  instances.py  subnets.py  vpc_networks.py
make_it_so/make_it_so/: asgi.py  celery.py  settings.py  tracing.py  urls.py  wsgi.py
make_it_so/resources/: __init__.py  admin.py  base_resource.py  managers.py  models.py  tasks.py  types.py  utils.py
make_it_so/resources/hcl_utils/: ingestion.py  parsing.py
make_it_so/resources/management/commands/: create_gcp_project.py  hcl_apply.py  import_gcp_project.py  init_db.py
make_it_so/resources/migrations/: 0001_initial.py  0002_initial.py
make_it_so/transitions/: admin.py  apps.py  models.py  types.py
make_it_so/transitions/celery_utils/: __init__.py  context.py  exceptions.py  request.py  signals.py  task_class.py  tracing.py
make_it_so/transitions/migrations/: 0001_initial.py
make_it_so/transitions/tasks/: __init__.py  daemon_tasks.py  ensure_deleted.py  ensure_dependencies_ready.py  ensure_exists.py  ensure_forward_dependencies_deleted.py  ensure_healthy.py  ensure_updated.py  test_task.py
make_it_so/users/: admin.py  apps.py  models.py  views.py
make_it_so/users/migrations/: 0001_initial.py  0002_alter_usermodel_username.py
(+1 files in other folders)
